# WhisperFlow

./: CLAUDE.md  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts
app/keystore/: debug.jks
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-bridge.cpp  whisper-jni.cpp  whisper_jni.cpp
app/src/main/cpp/whisper.cpp/: VENDORING.md
app/src/main/java/de/minitraxx/whisperflow/: MainActivity.kt
app/src/main/java/de/minitraxx/whisperflow/api/: ClaudeClient.kt  StylePrompts.kt  WhisperClient.kt  WhisperPrompts.kt
app/src/main/java/de/minitraxx/whisperflow/nativebridge/: WhisperBridge.kt
app/src/main/java/de/minitraxx/whisperflow/service/: FloatingButtonService.kt  PomodoroReceiver.kt  WhisperAccessibilityService.kt
app/src/main/java/de/minitraxx/whisperflow/ui/: ParkingBoardActivity.kt
app/src/main/java/de/minitraxx/whisperflow/ui/theme/: Theme.kt
app/src/main/java/de/minitraxx/whisperflow/util/: CostTracker.kt  CustomVocab.kt  ParkingBoardStore.kt  PomodoroManager.kt
app/src/main/java/de/minitraxx/whisperflow/whisper/: AudioDecoder.kt  LocalWhisperEngine.kt  ModelManager.kt  OnDeviceWhisperEngine.kt  WhisperJni.kt
app/src/main/res/drawable/: ic_edit.xml  ic_mic.xml  ic_undo.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
docs/: betriebsanleitung.html  button-guide.html
gradle/: libs.versions.toml
